--- a/mutations_mkyong /pom.xml
+++ b/mutations_mkyong /pom.xml
@@ -69,6 +69,13 @@
           <artifactId>maven-project-info-reports-plugin</artifactId>
           <version>3.0.0</version>
         </plugin>
+
+        <!-- Pitest plug -->
+        <plugin>
+            <groupId>org.pitest</groupId>
+            <artifactId>pitest-maven</artifactId>
+            <version>LATEST</version>
+        </plugin>
       </plugins>
     </pluginManagement>
   </build>
