--- a/mutations_mkyong /pom.xml
+++ b/mutations_mkyong /pom.xml
@@ -25,6 +25,13 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+
+    <!-- The Jterminal stuff -->
+    <dependency>
+      <groupId>com.grahamedgecombe.jterminal</groupId>
+      <artifactId>jterminal</artifactId>
+      <version>1.0.1</version>
+    </dependency>
   </dependencies>
 
   <build>
