--- a/jterminal/pom.xml
+++ b/jterminal/pom.xml
@@ -14,8 +14,8 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.7</maven.compiler.source>
-    <maven.compiler.target>1.7</maven.compiler.target>
+    <maven.compiler.source>11</maven.compiler.source>
+    <maven.compiler.target>11</maven.compiler.target>
   </properties>
 
   <dependencies>
@@ -84,10 +84,18 @@
           <version>3.0.0</version>
         </plugin>
        
+        <!-- pitest plugin  -->
         <plugin>
-            <groupId>org.pitest</groupId>
-            <artifactId>pitest-maven</artifactId>
-            <version>LATEST</version>
+          <groupId>org.pitest</groupId>
+          <artifactId>pitest-maven</artifactId>
+          <version>LATEST</version>
+          <!-- Dr.Ayid added these changes  -->
+          <configuration>
+            <mutators>
+              <mutator>STRONGER</mutator>
+            </mutators>
+          </configuration>
+          <!-- Dr.Ayid added these changes  -->
         </plugin>
       </plugins>
     </pluginManagement>
